syntax = "proto3";

package go.micro.srv.DeleteSession;

service Example {
	rpc DeleteSession(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string Sessionid = 1;
}

message Response {
	string Errno = 1;
	string ErrMsg = 2;
}
