syntax = "proto3";

package go.micro.srv.PostHouses;

service Example {
	rpc PostHouses(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string Sessionid = 1;
	bytes Max =2 ;
}

message Response {
	string Errno = 1;
	string Errmsg = 2;
	int64 House_Id = 3;
}